--- a/index.html
+++ b/index.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <style>
-    .oh {
-      position: relative;
-      overflow: hidden;
-    }
-    #video {
-      display: none;
-    }
-  </style>
-</head>
-<body>
-  <div class="oh">
-    <div>
-      选择mp4文件
-      <input type="file" id="inputFile" accept=".mp4" />
-    </div>
-    <canvas id="canvasShow"></canvas>
-    <video id="video"></video>
-  </div>
-
-  <script src="./index.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><title>图片转字符画工具</title><link href=./css/app.11b95d52a3e4078856fe.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./js/manifest.4a2fe6f81b84c092efb0.js></script><script type=text/javascript src=./js/vendors.38e44c19891fd46c7561.js></script><script type=text/javascript src=./js/app.f1a0f62f6a04e8c6db26.js></script></body></html>
